// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Homepage renders the page and changes the filter values 1`] = `
<span
  class="MuiTypography-root MuiTypography-caption MuiTypography-gutterBottom MuiTypography-displayBlock"
>
  Stock # 65365
  <span
    class="sc-fzplWN beffhE"
  >
     - 186,866 km
  </span>
  <span
    class="sc-fznyAO looylO"
  >
     - Petrol - white
  </span>
  <div
    class="MuiCardActions-root MuiCardActions-spacing"
  >
    <a
      class="sc-AxirZ iLjBBz sc-fznKkj bkajBi"
      data-testid="car-65365"
      href="/car/65365"
    >
      View details
    </a>
  </div>
</span>
`;

exports[`Homepage renders the page and changes the filter values 2`] = `
<span
  class="MuiTypography-root MuiTypography-caption MuiTypography-gutterBottom MuiTypography-displayBlock"
>
  Stock # 66926
  <span
    class="sc-fzplWN beffhE"
  >
     - 188,218 km
  </span>
  <span
    class="sc-fznyAO looylO"
  >
     - Diesel - white
  </span>
  <div
    class="MuiCardActions-root MuiCardActions-spacing"
  >
    <a
      class="sc-AxirZ iLjBBz sc-fznKkj bkajBi"
      data-testid="car-66926"
      href="/car/66926"
    >
      View details
    </a>
  </div>
</span>
`;
